z-index correction header

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -9,7 +9,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  z-index: -1;
+  z-index: 1;
 }
 
 .header__title {
@@ -22,7 +22,6 @@
   padding-top: 202px;
   margin-top: 0;
   margin-bottom: 0;
-  z-index: 1;
 }
 
 .header__accent {
@@ -41,7 +40,6 @@
   margin: 0;
   padding-top: 28px;
   padding-left: 80px;
-  z-index: 1;
 }
 
 .header__image {
